# AdiExplains

./: MDP_introduction.ipynb  test.py
Data Science & Machine Learning/: DBSCAN_clustering.ipynb  clustering-performance-metrics.ipynb  cross-validation.ipynb  datapreprocessing_ML.ipynb  hierarchial-clustering.ipynb  hyperparameter-tuning.ipynb  imagecompression_PCA.ipynb  knn-classifier.ipynb  knn-regression.ipynb  naivesbayes-to-classify-iris-flowers.ipynb
Data Structures & Algorithms in Python/: Linked List.py  binary_search_tree_creation_deletion.py  binary_search_tree_level_order_traversal.py  binary_search_tree_searching_&_depth_first_search.py  binary_tree_creation_insertion&_DepthFirstSearch.py  binary_tree_level_order_traversal.py  binary_tree_searching_&_deletion.py  deque_collections.py  deque_implementation.py  graph_datastructure_breadth_first_search_part2.py  graph_datastructure_creation_part1.py  graph_datastructure_depth_first_search_part3.py  heap_tree_in_python(min_heap).py  queue_implementation.py  stack_implementation.py  trie_datastructure_python.py
Deeplearning series/: autoencoderstocompressimages.ipynb  braintumorsegmentation-transfer-learning.ipynb  covid-19-prediction-using-cnn.ipynb  cpu_vs_gpu.ipynb  creditcard-frauddetection-using-deeplearning.ipynb  imagedenoising-using-denoising-autoencoder.ipynb  stock-prediction-using-rnn.ipynb  stock-price-prediction-using-gru.ipynb  stock-price-prediction-using-lstm.ipynb
Generative AI/fastmcp_tutorial/: client.py  pyproject.toml  (+1 more)
Generative AI/simple_rag/: .env.example  pyproject.toml  rag.py
(+22 files in other folders)
