[project]
name = "simple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain-community==0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "pypdf>=6.10.1",
]
